Force one stream for raw muxers.

Based on eeb975f5
Fixes ticket #3217.

Reviewed-by: Nicolas George